--- a/politics/近代史.md
+++ b/politics/近代史.md
@@ -2,39 +2,47 @@
 
 1785年瓦特改良蒸汽机，蒸汽时代
 
-1840年前后英国的大机器生产基本上取代了传统的工厂手工业，第一次工业革命基本完成。英国成为世界上第一个工业国家
-
 1839年6月虎门销烟
 
-1840年6月鸦片战争
+1840年6月鸦片战争。英国的大机器生产基本上取代了传统的工厂手工业，第一次工业革命基本完成。英国成为世界上第一个工业国家
 
 **1840年到1919年：旧民主主义革命时期**
 
-1842年8月29日中英《南京条约》
+1841年三元里抗英，中国近代史上中国人民第一次大规模的反侵略武装斗争。
 
-1843年10月中英《虎门条约》、魏源《海国图志》
+1842年8月29日中英《南京条约》，第一次鸦片战争结束
+
+1843年10月中英《虎门条约》、魏源《海国图志》“师夷长技以制夷”。中英《五口通商章程》。
 
 1844年7月中美《望厦条约》、10月中法《黄埔条约》
 
 1846年美墨战争（1848年结束）
 
-1848年2月24日《共产党宣言》正式出版
+1848年2月24日《共产党宣言》
 
-1851年-1864年太平天国运动
+**1851年-1864年太平天国运动**
 
-1853年太平天国攻克武昌、江宁，定都天京；日本黑船事件。
+1853年太平天国攻克武昌、江宁，定都天京，颁布《天朝田亩制度》；日本黑船事件。
+
+1853年~1856年克里米亚战争（俄国对抗奥斯曼、英法）
+
+1856年天京事变。
 
 1856年10月至1860年10月第二次鸦片战争（英法）
 
+1857年6月石达开率部出走。
+
 1858年，5月中俄《瑷珲条约》。6月中英《天津条约》。
 
-1860年至1890年：洋务运动兴起（19世纪60年代初至19世纪90年代）
+1859年，太平天国《资政新篇》（中国近代史上第一个比较系统的发展资本主义的方案）。
 
-1860年中英法俄《北京条约》；上海江南制造总局（曾国藩支持、李鸿章筹办），金陵机器局（李鸿章）
+**1860年至1890年：洋务运动兴起（19世纪60年代初至19世纪90年代，自强求富）**
+
+1860年10月第二次鸦片战争结束，中英法俄《北京条约》。上海江南制造总局（曾国藩支持、李鸿章筹办）。金陵机器局（李鸿章）。
 
 1861年4月12日 至 1865年4月9日，美国南北战争。
 
-1864年2月至10月普丹战争
+1864年2月至10月普丹战争。太平天国覆灭。
 
 1865年，福州船政局（左宗棠）。4月美国南北战争结束。
 
@@ -54,29 +62,35 @@
 
 1877年，日本倒幕运动尾声，日本封建军国主义国家建立，日本资本主义革命结束。
 
+1877 年-1878年：第十次俄土战争。
+
 1885年镇南关大捷（中法）；
 
 1894年甲午战争，孙中山创立兴中会喊出“振兴中华”
 
-1895年4月《马关条约》、严复《救亡决论》、公车上书
+1895年4月甲午战败（洋务运动失败）《马关条约》。公车上书。沙俄联合法、德干涉日本割占中国辽东半岛。严复《救亡决论》。
 
-1898年6月11日戊戌变法；7月3日京师大学堂；9月21日慈禧太后等发动戊戌政变，历时103天的变法失败；《时局图》
+1897年严复翻译并发表《天演论》“物竞天择，适者生存”。
 
-1899年秋—1900年9月7日：义和团运动
+1898年。6月11日**戊戌变法**（戊戌维新运动，中国民族资产阶级登上政治舞台的第一次表演）；7月3日京师大学堂；9月21日慈禧太后等发动戊戌政变，历时103天的变法失败；《时局图》
 
-1900年八国联军侵华
+**1899年秋—1900年9月7日：义和团运动**
+
+1900年八国联军侵华（英法美德俄日意奥）。7月俄罗斯派兵占领中国东北三省
 
 1901年《辛丑条约》
 
-1904年2月—1905年9月：日俄战争。
+1902年4月中俄签订《交收东三省条约》，但当年10月俄罗斯第一次撤兵之后，便不肯继续履行。
+
+1904年2月—1905年9月：日俄战争（日俄在中国东北争夺在华利益，清政府宣布局外中立，俄屡遭失败，美国出面调停，日俄议和，中国被排斥于和谈之外，最终无奈地接受日俄重新划分东北势力范围）。
 
 1905年至1911年清政府立宪运动、清末新政
 
-1905年同盟会建立、五大臣出洋考察、科举制度被废除
+1905年。8月20日中国同盟会在日本东京建立（近代中国第一个领导资产阶级革命的全国性政党，广义上的辛亥革命开始）。五大臣出洋考察。科举制度被废除
 
 1906年下诏预备立宪
 
-1907年预备立宪公会、英法俄三国协约
+1907年预备立宪公会。英法俄三国协约。
 
 1908年钦定宪法大纲
 
@@ -84,7 +98,9 @@
 
 1910年资政院开院礼
 
-1911年，任命内阁（皇族内阁）。4月27日黄花岗起义。6月四省保路风潮。10月10日武昌起义
+1911年，任命内阁（皇族内阁）。4月27日黄花岗起义。6月四省保路风潮。10月10日武昌起义（**辛亥革命**开始，开创了完全意义上的近代民族民主革命，没有彻底反帝反封建的革命纲领。）。
+
+**1912年中华民国成立**
 
 1912年1月1日中华民国成立孙中山任临时大总统、2月12日清帝退位、3月10日袁世凯就任临时大总统
 
@@ -92,99 +108,105 @@
 
 1912年~1919年：民族工业短暂春天
 
-1913年3月宋教仁被暗杀、7月至9月武力镇压”二次革命“
+1913年。3月宋教仁被暗杀。7月至9月武力镇压”二次革命“
 
-1914年袁世凯撕毁《临时约法》、孙中山在日本组织中华革命党、7月28日一战爆发
+1914年。袁世凯撕毁《临时约法》。孙中山在日本创建中华革命党。7月28日一战爆发
 
-1915年袁世凯基本接受日本”二十一条“要求；蔡锷等在云南组织护国军，开始护国运动；9月陈独秀在上海创办《青年杂志》（后改名《新青年》）
+1915年。袁世凯基本接受日本”二十一条“要求。蔡锷等在云南组织护国军，开始护国运动。9月陈独秀在上海创办《青年杂志》（后改名《新青年》）
 
-1915年-1923年，新文化运动
+**1915年-1923年，新文化运动**
 
-1916年1月1日袁世凯称帝；3月23日取消帝制；6月6日袁世凯去世（皖系军阀段祺瑞掌握了北洋政府、孙中山举起“护法”旗帜）
+1916年1月1日袁世凯称帝；3月23日取消帝制；6月6日袁世凯去世，皖系军阀段祺瑞掌握了北洋政府，孙中山举起“护法”旗帜（护法运动）
 
 1917年1月蔡元培任北大校长，聘陈独秀为文科学长，《新青年》迁至北京；3月俄国爆发二月革命；4月6日，美国向德国宣战，次日向奥匈宣战；6月张勋复辟（仅12天）；8月14日大总统冯国璋在8月14日发布《大总统布告》，声明自当日上午10时起，对德国、奥匈帝国宣战；9月在广州成立以孙中山为大元帅的护法军政府；11月7日，俄国十月革命，苏维埃政权确立
 
-1918年5月21日，孙中山愤然离开广州去上海，护法运动失败；7月，李大钊《法俄革命之比较观》；11月11日一战结束，11月李大钊《庶民的胜利》《布尔什维主义的胜利》
+1918年5月21日，孙中山愤然离开广州去上海，护法运动失败；7月，李大钊《法俄革命之比较观》；11月11日一战结束。11月李大钊《庶民的胜利》《布尔什维主义的胜利》
 
-1919年，1月巴黎和会召开；5月五四运动；6月5日上海工人罢工；6月28日中国代表未出席巴黎和约的签字仪式；9月李大钊《我的马克思主义观》；旧民主主义革命时期至此结束，新民主主义革命时期的开端。
+1919年，1月巴黎和会召开；5月五四运动；6月5日上海工人罢工；6月28日中国代表未出席巴黎和约的签字仪式；9月李大钊《我的马克思主义观》（标志着马克思主义在中国进入比较系统的传播阶段）；旧民主主义革命时期至此结束，新民主主义革命时期的开端。
+
+**1919年到1949年新民主主义革命时期**
 
 **1919~1927大革命时期**
 
 1920年，3月李大钊成立马克思主义学说研究会；4月俄共来华会见陈李；8月共产党早期组织在上海《新青年》编辑部成立，陈独秀为书记。8月陈望道翻译的《共产党宣言》出版。10月李大钊等在北京成立共产党早期组织，并在11月定名为中国共产党北京支部，李大钊任书记。11月，上海机器工会。
 
-1921年，苏维埃俄国内战结束，苏维埃俄国实现新经济政策；7月23日，中国共产党第一次全国代表大会；9月中国第一个农民协会，开展反抗地主压迫斗争
+1921年，苏维埃俄国内战结束，苏维埃俄国实现新经济政策。7月23日，中国共产党第一次全国代表大会（**党一大**，上海，成立中国共产党，通过了第一个纲领和决议，没有区分民主革命和社会主义革命）。9月中国第一个农民协会，开展反抗地主压迫斗争
 
-1922年，1月香港海员罢工。2月中共二大。6月粤系陈炯明叛乱。12月30日苏联正式成立。
+1922年，1月香港海员罢工。6月粤系陈炯明叛乱。7月中国共产党第二次全国代表大会（**党二大**，上海，反帝反封建的民主革命纲，分清民主主义革命界限与社会主义革命的界限但不懂得新旧民主主义革命的界限，制定了第一部《中国共产党章程》，通过《中国共产党加入第三国际决议案》、《关于“民主的联合战线”的决议案》正式提出统一战线政策）。12月30日苏联正式成立。
 
-1923年，1月孙中山与苏俄代表《孙文越飞联合宣言》。2月京汉铁路工人罢工（二七惨案）。6月，中共三大，建立统一战线。
+1923年，1月孙中山与苏俄代表《孙文越飞联合宣言》。2月京汉铁路工人罢工（二七惨案）。6月，中国共产党第三次全国代表大会（**党三大**，广州，党员以个人身份加入国民党，采取党内合作的形式同国民党建立联合战线，没有提出无产阶级应当努力争取对民主革命的领导权的问题）。
 
-1924年，1月国民党一大，新三民主义，第一次国共合作的正式形成。工人运动开始复兴。创办黄埔军校。
+1924年，1月国民党一大（新三民主义，联俄联共，扶助和依靠农工，第一次国共合作的正式形成）。1月陈炯明被滇、桂、粤联军组成的西路讨贼军击败率部退守东江。工人运动开始复兴。创办黄埔军校。
 
-1925年，3月12日孙中山逝世。5月，五卅运动，掀起全国范围大革命（1925~1927）的高潮。
+**1925年大革命开始**
+
+1925年。1月中国共产党第四次全国代表大会（**党四大**，上海，明确提出无产阶级在民主革命中的领导权和工农联盟问题，但对如何实行无产阶级的领导权没有作出具体回答，对政权和武装问题的极端重要性缺乏足够的认识）。3月12日孙中山逝世。5月，五卅运动，掀起全国范围大革命（1925~1927）的高潮。国民革命军两次东征，彻底打垮陈炯明所部。
 
 1926年，7月北伐战争。9月1日毛泽东《国民革命与农民运动》。
 
-到1927年3月仅10个月时间，国民革命军便从广州打到武汉、南京和上海，打垮了吴佩孚、孙传芳两大军阀，革命势力从珠江流域一直推进到长江流域。到1927年6月，武汉政府的北伐军与北方国民军会师中原，革命势力便发展到黄河流域，席卷大半个中国。
+1926年到1927年3月，仅10个月时间，国民革命军便从广州打到武汉、南京和上海，打垮了吴佩孚、孙传芳两大军阀，革命势力从珠江流域一直推进到长江流域。到1927年6月，武汉政府的北伐军与北方国民军会师中原，革命势力便发展到黄河流域，席卷大半个中国。
 
-1927年，3月蒋介石制造中山舰事件。4月12日蒋介石上海四一二反革命政变，并在南京建立国民政府，国民政府宁汉分裂。7月15日汪精卫武汉国民政府发动七一五反革命政变，国共合作破裂，大革命失败。7月中共中央政治局常委会决定三件大事（土地革命兴起）。8月7日中共秘密召开八七会议（土地革命、武装反抗、清算右倾机会主义错误）。8月1日，南昌起义。9月，宁汉合流。9月9日，秋收起义。12月11日广州起义。
+1927年，3月蒋介石制造中山舰事件。4月12日蒋介石上海四一二反革命政变，并在南京建立国民政府，国民政府宁汉分裂。4月李大钊牺牲。4月中国共产党第五次全国代表大会（**党五大**，武汉，会议实际上并没有解决挽救时局的问题，修改党章，正式提出党内实行民主集中制的组织原则）。7月15日汪精卫武汉国民政府发动七一五反革命政变，国共合作全面破裂，大革命失败。7月中共中央政治局常委会决定三件大事（土地革命兴起）。8月7日中共秘密召开**八七会议**（汉口，确定了土地革命和武装起义方针、清算右倾机会主义错误）。8月1日，南昌起义。9月，宁汉合流。9月9日，秋收起义（打出来“工农革命军”旗帜，攻打长沙受挫后南下向农村区域转移）。9月底，三湾改编，从政治上、组织上保证了党对军队的绝对领导，标志着毛泽东建设人民军队思想的开始形成。12月11日广州起义。
 
-**1927~1937土地革命时期**
+**1927~1937土地革命时期**（十年内战时期、第二次国内革命战争；苏维埃政权，工农民主专政）
 
-1928年，4月讨伐张作霖。6月张作霖被日本炸死。10月和11月，毛泽东《中国的红色政权为什么能够存在？》、《井冈山的斗争》（工农武装割据思想）。12月毛泽东主持制定中共第一个土地法。12月29日东北易帜，北洋军阀不再作为独立的政治力量存在，国民党在全国范围内建立了自己的统治。
+1928年，4月讨伐张作霖。6月张作霖被日本炸死。6月中国共产党第六次全国代表大会（**党六大**，莫斯科，中国革命仍是资产阶级性质的民主主义革命，但又认为“民族资产阶级是阻碍革命胜利的最危险的敌人之一”，这就混淆了民主革命和社会革命的界限）。10月和11月，毛泽东《中国的红色政权为什么能够存在？》、《井冈山的斗争》（工农武装割据思想）。12月毛泽东主持制定中共第一个土地法**《井冈山土地法》**（没收一切土地归苏维埃政府所有，禁止土地买卖等）。12月29日东北易帜，北洋军阀不再作为独立的政治力量存在，国民党在全国范围内建立了自己的统治。
 
 1928-1929年，中国民族工商业短暂繁荣。
 
-1929年，2月蒋桂战争、蒋冯战争。4月毛泽东主持制定中共第二个土地法。10月，由美国开始的经济危机席卷整个资本主义世界。12月下旬古田会议（思想建党、政治建军）。
+1929年，2月蒋桂战争、蒋冯战争。4月毛泽东主持制定中共第二个土地法**《兴国土地法》**（将没收一切土地变为没收一切公用土地及地主阶级的土地，保护了中农的利益使之不受侵犯）。10月，由美国开始的经济危机席卷整个资本主义世界。12月红四军党的第九次代表大会（**古田会议**，思想建党、政治建军）。
 
-1930年，1月毛泽东《星星之火，可以燎原》（党的中心转移到农村）。5月毛泽东《反对本本主义》（理论与实际相结合）。5月至10月，中原大战。10月蒋介石开始”围剿“。
+1930年，1月毛泽东《星星之火，可以燎原》（党的中心转移到农村）。5月毛泽东《反对本本主义》（理论与实际相结合。农村包围城市、武装夺取政权。毛泽东思想的初步形成）。5月至10月，中原大战。10月蒋介石开始”围剿“。
 
 1930年10月~1931年7月，连续粉碎三次”围剿“。
 
 **1931~1945抗日战争时期**
 
-1931年，5月汪精卫、孙科等人成立广州国民政府和蒋介石南京政府相对抗。7月蒋介石提出“攘外必先安内”方针。9月18日，九一八事变。9月20日中共中央号召全国农工武装起来。11月中华苏维埃第一次全国工农兵代表大会举行，《中华苏维埃共和国宪法大纲》。
+1931年。2月明确规定农民已经分得的田归农民个人所有，可以自主租借买卖（土地革命中的阶级路线和土地分配方法主要是：坚定地依靠贫农、雇农，联合中农，限制富农，保护中小工商业者.消灭地主阶级;以乡为单位，按人口平分土地，在原耕地的基础上.实行抽多补少、抽肥补瘦）。2月汤山事件（约法之争上，蒋介石拘禁国民政府立法院长胡汉民，引起了中国国民党内部的公开分裂，造成了宁粤对立的局面）。5月5日召开国民会议在会议上通过了《中华民国训政时期约法》（蒋介石随后又根据约法通过了《中华民国国民政府组织法》，确立了以国府主席为中心的集权体制，从法理上确保了蒋介石掌握至高无上的权力）。5月汪精卫、孙科等人成立广州国民政府和蒋介石南京政府相对抗。7月蒋介石提出“攘外必先安内”方针。9月1日，广州国民政府下达总动员令，出师讨蒋（一度占领湖南衡州。旋因爆发九一八事变，被迫停战）。9月18日，**九一八事变**。9月20日中共中央号召全国农工武装起来。11月中华苏维埃第一次全国工农兵代表大会举行，**中华苏维埃共和国**临时中央政府在江西中央苏区成立，主席毛泽东，定都瑞金（中央苏区-瑞金县），《中华苏维埃共和国宪法大纲》，红色中华通讯社成立（1937年1月改名为新华社）。12月蒋介石下野、宁粤合流，但依旧没有弥合裂隙。本年，经过三年多实践，党的**土地革命路线基本形成**，即：依靠贫农、雇农，联合中农，限制富农，消灭地主阶级，变封建土地所有制为农民土地所有制，保护中小工商业者，以乡为单位，按人口平分土地，在原耕地基础上，实行抽多补少、抽肥补瘦。
 
-1932年，1月28日日本进攻上海（一·二八事变），第一次淞沪抗战开始。1月，原西北军将领冯玉祥在张家口成立察哈尔民众抗日同盟军。2月东北全境沦陷，“伪满洲国”。4月15日中华苏维埃共和国临时中央政府宣布对日作战。年底取得第四次反”围剿“成功，鄂豫皖、湘鄂西等根据地反“围剿”战争也取得重大胜利。11月，福建事变（国民党军第十九路军公开宣布抗日反蒋）。
+1932年。中共中央号召各界民众组织义勇军，支援国民党第十九路军的抗日作战。1月5日广州国民政府宣布取消（但粤方势力新设西南两机关，继续维持割据状态，直到1936年两广事变和平解决为止。1月28日日本进攻上海（一·二八事变），第一次淞沪抗战开始（粤系政府无法指挥，蒋介石复出任军事委员会委员长，汪精卫任行政院长）。1月，原西北军将领冯玉祥在张家口成立察哈尔民众抗日同盟军。2月东北全境沦陷，“伪满洲国”。4月15日中华苏维埃共和国临时中央政府宣布对日作战。年底取得第四次反”围剿“成功，鄂豫皖、湘鄂西等根据地反“围剿”战争也取得重大胜利。11月，福建事变（国民党军第十九路军公开宣布抗日反蒋）。
 
-1933年9月25日至1934年10月：第五次反“围剿”，“左”倾教条主义错误
+1933年，3月至5月长城抗战。5月5日签订了《淞沪停战协定》（中国军队不能在上海布防，从而使上海门户大开）。5月31日，中日《塘沽协定》（中国军队撤出长城以南大片地区）。9月25日第五次反“围剿”。
 
-1933年，3月至5月长城抗战。5月5日签订了《淞沪停战协定》。5月31日，中日《塘沽协定》。
+1934年，1月福建事变失败。10月，第五次反“围剿”失败，被迫实行战略性转移，**长征**。
 
-1934年，1月福建事变失败。10月，第五次反“围剿”失败，被迫实行战略性转移，长征。
+1935年，华北事变（日本策动、拼凑了一些地方性傀儡政权）。意大利入侵埃塞俄比亚。1月**遵义会议**（确立以毛泽东正确路线的领导地位，坚持真理、修正错误，开启了中国共产党独立自主解决中国革命实际问题的新阶段，集中解决了在当时具有决定意义的军事问题和组织问题）。5月，中共西北特委组建中华苏维埃共和国西北联邦，中华苏维埃共和国政治体制演变为联邦制。6月27日《察哈尔协定》丧失了察哈尔省主权，为日本吞并华北大开方便之门。8月1日，《为抗日救国告全体同胞书》（八一宣言，呼吁停止内战一致抗日）。11月，中华苏维埃共和国变更对外名义称“中华苏维埃共和国中央政府西北办事处”。12月，中华苏维埃政权改国名为“中华苏维埃人民共和国”，宣布迁都延安。12月9日，一二九运动(北平抗日游行、反对华北自治，标志着中国人民抗日救亡运动新高潮的到来）。12月党的**瓦窑堡会议**（建立广泛的抗日民族统一战线、批判“左”倾冒险主义和关门主义的错误倾向）。12月毛泽东《论反对日本帝国主义的策略》（阐明了党的抗日民族统一战线新政策，系统说明了党的政治策略上的诸问题）。
 
-1935年，华北事变，日本策动、拼凑了一些地方性傀儡政权。意大利入侵埃塞俄比亚。1月遵义会议。8月1日，八一宣言，呼吁停止内战。12月毛泽东《论反对日本帝国主义的策略》。12月9日，一二九运动(北平抗日游行、反对华北自治）。12月党的瓦窑堡会议（提出党的抗日民族统一战线）。
+1936年。5月毛朱《停战议和一致抗日通电》（放弃了“反蒋”口号，第一次公开把蒋介石作为联合对象）。6月至9月两广事变（两广军阀势力以抗日名义举兵反蒋，双方达成政治妥协而和平结束）。10月红军会师，**长征结束**。12月毛泽东《中国革命战争的战略问题》（总结土地革命战争中党内在军事问题上的争论，系统说明了有关中国战争战略方面的诸问题）。12月12日**西安事变**（和平解决，十年内战基本结束）。
 
-1936年10月红军会师，长征结束。12月毛泽东《中国革命战争的战略问题》。12月12日西安事变。
+1936年7月—1939年4月西班牙内战（二战前奏，共和政府军与左翼联盟对抗以法西斯弗朗哥为中心的西班牙国民军右翼集团）。
 
-1936年7月—1939年4月西班牙内战。
+**1937年全民族抗战开始**（抗日民族统一战线性质的政权）
 
-1937年夏，毛泽东《实践论》《矛盾论》。7月7日，卢沟桥事变（七七事变），日本全面侵华战争由此开始，21天后北平沦陷。8月国共两党达成协议（八路军、新四军）。8月中共洛川会议（抗日救国十大纲领）。8月13日—11月12日，淞沪会战，上海沦陷。9月—11月太原会战（9月八路军平型关大捷，11月太原失守）。9月22日国民党《中国共产党为公布国共合作宣言》。9月23日蒋介石发表实际承认共产党合法地位的谈话。11月华北战场忻口会战。11月20日迁移政府于重庆。12月南京沦陷（南京大屠杀）。
+1937年。2月国民党五届三中全会（国共两党第二次合作不可阻挡）。夏，毛泽东《实践论》《矛盾论》（克服教条主义）。7月7日，**卢沟桥事变（七七事变）**，日本全面侵华战争由此开始，21天后北平沦陷。8月国共两党达成协议（八路军、新四军）。8月中共洛川会议（抗日救国十大纲领，全民族抗战）。8月13日—11月12日，淞沪会战，上海沦陷。9月6日，中华苏维埃共和国中央政府西北办事处更名“中华民国陕甘宁边区政府”。9月22日，**正式结束苏维埃国家政权形式**，陕甘宁边区政府成为民国的一个特别行政区。9月—11月太原会战（9月八路军平型关大捷，11月太原失守，在华北以国民党为主体的正规战争结束，以共产党为主体的游击战争上升到主要地位）。9月22日国民党《中国共产党为公布国共合作宣言》。9月23日蒋介石发表实际承认共产党合法地位的谈话。11月华北战场忻口会战。11月20日迁移国民政府于重庆。11月，中国第一个抗日根据地——晋察冀抗日根据地成立（抗日民主根据地的建设：工作人员分配上实行“三三制”原则，共产党员大体占三分之一，左派进步分子大体占三分之一，中间分子和其他分子大体占三分之一；土地政策是减息减租，不是实行没收地主土地的政策；"发展经济，保障供给"，“自己动手，丰衣足食”）。12月南京沦陷（**南京大屠杀**）。
 
-1938年，1月至5月台儿庄战役、徐州会战。5月毛泽东《论持久战》。6月至10月武汉会战，武汉失守。9月至11月，党的六届六中全会（提出马克思主义中国化）。10月广州失守。10月从战略防御阶段转为战略相持阶段。12月中国国民党副总裁汪精卫投降日本。
+1938年，1月至5月台儿庄战役、徐州会战。5月毛泽东《论持久战》。6月至10月武汉会战，武汉失守。9月至11月，**中共六届六中全会**（提出马克思主义中国化）。10月广州失守。10月从战略防御阶段转为战略相持阶段，日本开始”以华制华“和”以战养战“策略。12月中国国民党副总裁汪精卫投降日本。
 
-1939年。1月国民党“防共委员会”。8月23日《苏德互不侵犯条约》。9月1日德国进攻波兰（一战欧洲部分爆发）。10月，宪政运动（批评国民党一党专政）。
+1939年。1月国民党“防共委员会”。5月到9月苏日诺门罕战役，日军战败，日本政府被迫签订《苏日停战协定》。8月23日《苏德互不侵犯条约》。9月1日德国进攻波兰（**一战欧洲部分爆发**）。9月第一次长沙会战。10月，宪政运动（批评国民党一党专政）。12月毛泽东《中国革命和中国共产党》（第一次提出新民主主义革命的科学概念和总路线的内容）。
 
-1940年，3月汪精卫在南京成立伪“中华民国国民政府”。4月9日德国攻击丹麦和挪威。5月敦刻尔克大撤退。6月22日，法国正式投降。8月至次年1月，百团大战。8月，创办延安自然科学院。
+1940年，3月汪精卫在南京成立**伪“中华民国国民政府”**。4月9日德国攻击丹麦和挪威。5月敦刻尔克大撤退。6月22日，法国正式投降。8月至次年1月，百团大战。8月，创办延安自然科学院。10月19日，国民政府致电(即“**皓电**”)八路军新四军对中国共产党及其领导的武装力量进行种种攻击和诬蔑（其中特别列举抗战以来华北、华中各地发生的摩擦事件，并将其原因归结于八路军和新四军），成为第二次反共高潮的起点。
 
-1941年。6月22日苏德战争爆发。3月，中国民主政团同盟成立，9月创办盟报《光明报》。5月毛泽东《改造我们的学习》（延安整风运动、反对主观主义）。12月7日偷袭珍珠港，太平洋战争爆发。
+1941年。1月皖南事变（国民党反动派在皖南有预谋地围袭新四军，反诬新四军“叛变”，宣布取消新四军番号，事变发生后，中共采取了坚决的斗争政策。不仅严厉谴责国民党顽固派的罪恶阴谋，而且严正地宣布重建新四军，国民党发动的第二次反共高潮）。6月22日苏德战争爆发。3月，中国民主政团同盟成立（民盟），9月创办盟报《光明报》。5月毛泽东《改造我们的学习》，整风运动，反对主观主义（主观主义：教条主义、经验主义。最主要任务）以整顿学风，反对党派主义以整顿党风，反对党八股以整顿文风。9月第二次长沙会战。11月皖南事变而引起的一系列斗争结束。12月7日**偷袭珍珠港**，太平洋战争爆发。
 
-1942年。1月《联合国家宣言》。1月，第三次长沙会战（给日军有力打击）。2月，中国远征军进入缅甸抗日。2月《整顿党的作风》《反对党八股》（延安整风运动在全党范围普遍展开）。中途岛海战，太平洋战争转折点。
+1942年。1月《联合国家宣言》。1月，第三次长沙会战（给日军有力打击）。2月，中国**远征军**进入缅甸抗日。2月《整顿党的作风》《反对党八股》（延安整风运动在全党范围普遍展开）。**中途岛海战**，太平洋战争转折点。
 
-1942年7月—1943年2月，斯大林格勒战役（二战转折点）。
+1942年7月—1943年2月，**斯大林格勒战役**（二战转折点）。
 
-1943年11月《开罗宣言》。11月德黑兰会议。
+1943年11月《开罗宣言》（协调对日作战的共同军事问题和战后处置日本等，从法律上明确了日本侵占台湾的非法性，确认了台湾是中国领土）。11月德黑兰会议（开辟西欧第二战场，建立维护和平的国际组织，巴尔干、法国、远东、芬兰以及波兰疆界等问题，《德黑兰宣言》）。
 
-1944年，豫湘桂战役。6月诺曼底登陆。9月，提出联合政府主张。
+1944年，豫湘桂战役。6月**诺曼底登陆**。7月联合国国际货币金融会议（布雷顿森林货币体系，二战后以美元为中心的国际货币体系，外汇自由化、资本自由化和贸易自由化为主要内容的多边经济制度，构成资本主义集团的核心内容。）。9月，提出联合政府主张。
 
-1945年，2月雅尔塔会议。4月中共七大（制定了党的政治路线、三大作风、毛泽东思想、党在政治上思想上理论上走向成熟）。4月至6月，联合国制宪会议《联合国宪章》。5月德国投降。7月《波茨坦公告》。8月，苏联进入中国东北对日作战。8月6日广岛”小男孩“。8月9日长崎“胖子”。8月15日，《终战诏书》。8月重庆谈判。9月2日，日本签署向同盟国投降书。9月3日，中国人民抗日战争胜利纪念日。10月10日，《政府与中共代表会谈纪要》（双十协定）。10月25日中国政府举行受降仪式。年底，一二·一运动。
+1945年，2月雅尔塔会议（制定战后新秩序和列强利益分配的首脑会议，雅尔塔体系）。3月至5月豫西鄂北会战。4月中国共产党第七次全国代表大会（**党七大**，延安，制定了党的政治路线、三大作风、正式命名**毛泽东思想**并规定为党一切工作的指针、党在政治上思想上理论上走向成熟）。4月至6月，联合国制宪会议《联合国宪章》。4月-6月湘西会战。5月**德国投降**。7月《波茨坦公告》。8月，苏联进入中国东北对日作战。8月6日广岛”小男孩“。8月9日长崎“胖子”。8月15日，日本**《终战诏书》**。8月29日至10月10日，经过43天谈判，《政府与中共代表会谈纪要》（**双十协定**，确定和平建国基本方针，同意“长期合作，坚决避免内战”）。10月25日中国政府举行受降仪式。8月25日中共中央在《对目前时局的宣言》中明确提出和平、民主、团结的口号。9月2日，日本签署向同盟国投降书。9月3日，中国人民抗日战争胜利纪念日。12月，一二·一运动（反内战、争民主的爱国民主运动）。
 
-**1945~1949解放战争时期**
+**1945~1949解放战争时期**（各革命阶级的联合专政）
 
-1946年。1月10日重庆政治协商会议。5月4日《五四指示》。6月23日下关惨案。6月26日，国民党进攻中原解放军，挑起了全国性的内战。12月30日一二·三〇运动。
+1946年。1月10日重庆政治协商会议，五项协议（还不是新民主主义性质的）。5月4日《关于清算、减租及土地问题的指示》（**五四指示**，抗日战争时期实行的减租减息政策改为实行“耕者有其田”的政策）。6月23日下关惨案。6月26日，国民党进攻中原解放军，挑起了全国性的内战，**解放战争**爆发。12月30日一二·三〇运动（抗议美军暴行）。
 
 1946年至1947年6月：战略防御阶段
 
-1947年。五二〇运动。6月千里跃进大别山。7月《中国土地法大纲》。10月，国民党宣布民盟为“非法团体”
+1947年。五二〇运动（学生“反饥饿、反迫害、反内战”，遭到了国民党军警的残暴镇压）。6月千里跃进大别山。7月**《中国土地法大纲》**（解放区广大农村掀起土改高潮，“废除封建性及半封建性剥削的土地制度，实行耕者有其田的土地制度”，“乡村中一切地主的土地及公地，由乡村农会接收”，分配给无地或少地的农民）。10月，国民党宣布民盟为“非法团体”。10月10日，中国人民解放军总部发表宣言提出“打倒蒋介石，解放全中国”的口号。
+
+1948年秋，人民解放战争进入夺取全国胜利的决定性的阶段。
 
 1948年9月12日 至 11月2日辽沈战役。
 
@@ -192,39 +214,39 @@
 
 1948年11月29日 至 1949年1月31日平津战役。
 
-1949年。1月22日无党派人士《对时局的意见》。3月，中共七届二中全会。4月4日，北大西洋公约组织。4月23日，南京解放。6月，毛泽东《论人民民主专政》。9月21日，中国人民政治协商会议第一届全体会议，《中国人民政治协商会议组织法》《中华人民共和国中央人民政府组织法》《中国人民政治协商会议共同纲领》（共同纲领，宪法前身）。10月1日中华人民共和国成立。
+1949年。1月22日民主派和无党派人士《对时局的意见》（接受共产党的领导）。3月，**中共七届二中全会**（规定了党在全国胜利后在政治经济外交方面应采取的基本政策，指出中国由农业国转变为工业国、由新民主主义社会转变为社会主义社会的发展方向，提出了两个”务必“的思想）。4月4日，北大西洋公约组织。4月23日，南京解放，宣告**国民党反动派统治覆灭**。6月30日，毛泽东《论人民民主专政》，提出主要经验、主要纲领就是人民民主专政。9月21日，中国人民政治协商会议第一届全体会议，《中国人民政治协商会议组织法》《中华人民共和国中央人民政府组织法》《中国人民政治协商会议共同纲领》（**共同纲领**，宪法前身）。1**0月1日中华人民共和国成立。**
 
-**1949年至1956年过渡时期**。
+**1949年至1956年过渡时期**。（人民民主专政）
 
-1949至1953年国民经济的恢复和初步发展时期。
+**1949至1953年国民经济的恢复和初步发展时期。**
 
-1950年。2月14日《中苏友好同盟互助条约》。4月《中华人民共和国婚姻法》。5月海南岛解放。6月中共第七届三中全会。6月，朝鲜内战。10月抗美援朝。土地改革（1950年至1953年春）《中华人民共和国土地改革法》。
+1950年。2月14日《中苏友好同盟互助条约》。4月《中华人民共和国婚姻法》。5月海南岛解放。6月中共第七届三中全会，**《中华人民共和国土地改革法》**（保护富农政策），**土地改革**（1950年至1953年春）。6月，朝鲜内战。10月**抗美援朝**。
 
 1951年5月西藏和平解放。
 
-1951年底至1952年10月：“三反”运动。
+1951年底至1952年10月：“三反”运动（在中国共产党和国家机关内部开展的“反贪污 、反浪费、反官僚主义 ”的运动）。
 
-1952年上半年：“五反”运动。
+1952年上半年：“五反”运动（在资本主义工商业者中开展的反行贿、反偷税漏税、反盗骗国家财产、反偷工减料、反盗窃国家经济情报的斗争）。
 
-1953年。7月抗美援朝胜利。12月“过渡时期总路线”。“一五”计划。
+1953年。7月**抗美援朝胜利**。12月“过渡时期总路线”。我国开始执行发展国民经济的第一个五年计划（**“一五”计划**），农民的个体所有制变为集体所有制。到2021年6月，共编制执行十四个五年计划、规划。
 
-1953至1956年社会主义工业化和三大改造时期。
+**1953至1956年社会主义工业化和三大改造时期。**
 
-1954年9月20日第一部《中华人民共和国宪法》第一届全国人民代表大会第一次会议上通过（宪法1.0）。
+1954年9月第一届全国人民代表大会，20日第一部《中华人民共和国宪法》在第一次会议上通过（宪法1.0）。10月成立新疆军区生产建设兵团（1975年3月，兵团撤销，成立新疆维吾尔自治区农垦总局。1981年12月3日，中共中央、国务院、中央军委作出《关于恢复新疆生产建设兵团的决定》。）
 
 1955年，华沙条约组织（华约）建立
 
-1956年。社会主义三大改造基本完成。过渡时期结束。4月25日毛泽东《论十大关系》。9月中共八大（路线制定）。
+1956年。**社会主义三大改造基本完成**。过渡时期结束。4月25日毛泽东《论十大关系》。9月中国共产党第八次全国代表大会（**党八大**，北京，正确分析了国内形势和主要矛盾的变化，明确提出新形势下党和人民的主要任务。提出了正确的路线，为社会主义事业的发展和党的建设指明了方向；我们国内的主要矛盾，已经是人民对于建立先进的工业国的要求同落后的农业国的现实之间的矛盾，已经是人民对于经济文化迅速发展的需要同当前经济文化不能满足人民需要的状况之间的矛盾。）。
 
 **1956-1966年，全面建设社会主义时期。**
 
 1957年。2月《关于正确处理人民内部矛盾的问题》。4月《关于整风运动的指示》（整风运动）。《一九五七年夏季的形势》。6月反右派斗争。
 
-1958年5月“大跃进”、人民公社化运动高潮（”大跃进“至1960年）。苏联提出要在中国领土和领海上建立中苏共有共管的长波电台和共同舰队，遭到坚决拒绝，中苏关系开始恶化。
+1958年5月**“大跃进”**、人民公社化运动高潮（”大跃进“至1960年）。苏联提出要在中国领土和领海上建立中苏共有共管的长波电台和共同舰队，遭到坚决拒绝，中苏关系开始恶化。
 
 1958年11月第一次郑州会议作出初步纠正“左”倾错误的努力、党中央领导整顿人民公社。
 
-1959年至1961年三年困难时期（自然灾害）。
+1959年至1961年**三年困难**时期（自然灾害）。
 
 1959年。6月苏联政府撕毁两国关于国防新技术协定。7月纠正“左”倾错误的努力被庐山会议“反右倾”斗争中断。8月，中印第一次边境冲突，苏方不问是非曲直发表偏袒印度的声明，中苏关系进一步恶化。
 
@@ -234,59 +256,61 @@
 
 1961年1月中共八届九中全会（国民经济、调整巩固充实提高）。3月”农业六十条“。
 
-1962年。一二月间”七千人大会“（总结了”大跃进“以来经济建设工作的经验教训）。10月中印边境自卫反击战，11月结束。
+1962年。一月”七千人大会“（总结了”大跃进“以来经济建设工作的经验教训）。10月**中印边境自卫反击战**，11月结束。
 
 1963年夏开始，各项建设事业呈现明显的健康发展势头。到1965年底，调整国民经济的任务全面完成。
 
-1964年底，周恩来”四个现代化“。10月中国研制的第一颗原子弹爆炸成功。
+1964年底，周恩来”四个现代化“。10月中国研制的**第一颗原子弹**爆炸成功。12月三届全国人大。
 
-1966年。3月苏共召开二十三大，中国共产党决定不派代表出席，中苏两党关系基本中断。5月中共中央政治局扩大会议《中国共产党中央委员会通知》（”五一六通知“）。8月中共八届十一中全会《中国共产党中央委员会关于无产阶级文化大革命》简称”十六条“（标志着“文化大革命”的全面发动）。
+1966年。3月苏共召开二十三大，中国共产党决定不派代表出席，中苏两党关系基本中断。5月中共中央政治局扩大会议《中国共产党中央委员会通知》（”五一六通知“）。8月中共八届十一中全会《中国共产党中央委员会关于无产阶级文化大革命》简称”十六条“（标志着**“文化大革命”**的全面发动）。
 
 **1966年5月至1976年10月间：文化大革命时期**
 
 1967年。1月起”文化大革命“进入”全面夺权“阶段（打倒一切、全面内战）。2月批判“文化大革命”的老一辈革命家被诬为”二月逆流“。6月，于敏等参与研制的中国第一颗氢弹空爆试验成功爆炸
 
-1968年。苏修社会帝国主义镇压布拉格之春。9月，各地先后成立革命委员会（一定程度上结束了”文化大革命“前期的无政府状态）。10月，主席刘少奇被开除（一年后，刘少奇含冤病逝）。
+1968年。苏修社会帝国主义镇压**布拉格之春**。9月，各地先后成立革命委员会（一定程度上结束了”文化大革命“前期的无政府状态）。10月，主席刘少奇被开除党籍（一年后，刘少奇含冤病逝）。
 
-1969年。4月中共第九次全国代表大会（使”文化大革命“的理论和实践进一步系统化、合法化）。
+1969年。4月中共第九次全国代表大会（**党九大**，使”文化大革命“的理论和实践进一步系统化、合法化）。
 
-1970年至1971年间：林彪反革命集团阴谋夺取最高权力、策动反革命武装政变（客观上宣告”文化大革命“理论和实践的失败）。
+1970年至1971年间：林彪反革命集团阴谋夺取最高权力、策动反革命武装政变（**林彪政变**，客观上宣告”文化大革命“理论和实践的失败）。
 
-1970年。1月第一枚中远程导弹发射成功。4月24日，中国用长征一号运载火箭，成功地发射中国的第一颗人造卫星-- 东方红一号
+1970年。1月第一枚**中远程导弹**发射成功。4月24日，中国用**长征一号**运载火箭，成功地发射中国的第一颗人造卫星-- **东方红一号**。9月，林彪等人乘飞机仓皇出逃，在蒙古温都尔汗机毁人亡。
 
-1971年10月25日重返联合国。
+1971年。8月15日布雷顿森林体系被尼克松政府宣告结束。10月25日**重返联合国**。
 
-1972年，周恩来提出批判极”左“思潮（使得各方面工作有了明显起色）。2月，美国总统尼克松访华。
+1972年。周恩来提出批判极”左“思潮（使得各方面工作有了明显起色）。2月，美国总统**尼克松访华**。
 
-1973年，中共第十次全国代表大会（继续肯定了中共九大的政治路线和组织路线），此后”四人帮“企图全面篡夺党和国家的最高权力。
+1973年。3月，邓小平恢复国务院副总理职务。3月，美国撤离越南。8月，中共第十次全国代表大会（**党十大**，继续肯定了中共九大的政治路线和组织路线），此后**”四人帮“**企图全面篡夺党和国家的最高权力。
 
-1975年。1月，四届全国人大（任周恩来为总理，邓小平为第一副总理），第二部《中华人民共和国宪法》通过（’七五宪法”，有严重缺点、错误的宪法，宪法2.0）。11月成功发射中国第一颗返回式遥感人造地球卫星。
+1975年。1月，四届全国人大（任周恩来为总理，邓小平为第一副总理），第二部《中华人民共和国宪法》通过（’七五宪法”，有严重缺点、错误的宪法，宪法2.0）。3月新疆军区生产建设兵团撤销，成立新疆维吾尔自治区农垦总局。11月成功发射中国第一颗返回式遥感人造地球卫星。
 
-1976年。1月8日周恩来逝世。7月6日朱德逝世。9月9日毛泽东逝世。10月6日对“四人帮”隔离审查，14日党中央公布粉碎”四人帮“消息，结束了文化大革命。
+1976年。1月8日周恩来逝世。7月6日朱德逝世。7月越南战争结束。9月9日毛泽东逝世。10月6日华国锋、叶剑英代表中共中央政治局对“四人帮”隔离审查，14日党中央公布**粉碎”四人帮“**消息，**结束了文化大革命**。
 
 **1976年到1978年：徘徊中前进的时期**：
 
-1977年2月7日：两个“凡是”（“凡是毛主席作出的决策，我们都坚决维护，凡是毛主席的指示，我们都始终不渝地遵循”。其实质是又延续毛泽东晚年的“左”倾错误）
+1977年2月7日：两个“凡是”错误观点的提出（“凡是毛主席作出的决策，我们都坚决维护，凡是毛主席的指示，我们都始终不渝地遵循”。其实质是又延续毛泽东晚年的“左”倾错误）。8月中共第十一次全国代表大会举行（**党十一大**，大会宣告“文化大革命”已经结束，重申在20世纪内把中国建设成为社会主义现代化强国，但未能从根本上纠正“文化大革命”的错误）。
 
 1977－1978年：党中央主要领导人继续犯”左”的错误，指导思想没有改变，经济建设急于求成。教科文事业面貌一新，国民经济较快恢复。真理标准问题讨论解放了人们的思想。
 
-1978年越南入侵柬埔寨，中国和越南之间爆发中越战争。3月第五届全国人民代表大会第一次会议上第三部《中华人民共和国宪法》通过（七八宪法，宪法3.0）。11月安徽小岗村”大包干“。11月，邓小平《解放思想、实事求是，团结一致向前看》（冲破两个”凡是“）。12月18日至22日中共十一届三中全会（彻底否定两个”凡是“、工作重心转移、以邓小平为核心、改革开放）。
+1978年。3月第五届全国人民代表大会（提前一年召开）第一次会议上第三部《中华人民共和国宪法》通过（七八宪法，宪法3.0）。11月安徽小岗村”**大包干**“。11月，邓小平《解放思想、实事求是，团结一致向前看》（冲破两个”凡是“）。12月18日至22日**中共十一届三中全会**（伟大转折，彻底否定两个”凡是“、工作重心转移、以邓小平为核心、**改革开放**）。
+
+1978年12月25日 至 1991年10月23日柬越战争（越南社会主义共和国和民主柬埔寨）
 
 **1978年12月：中国开始走上改革开放的道路。**
 
 1979年12月24日 至 1989年2月15日：苏联-阿富汗战争。
 
-1979年。3月30日邓小平《坚持四项基本原则》。4月对国民经济实行”调整、改革、整顿、提高“的新八字方针（用三年时间调整国民经济，纠正经济工作中的失误，认真清理过去在这方面长期存在的”左倾错误“）。11月中共十一届四中全会《中共中央关于加快农业发展若干问题的决定》（家庭联产承包责任制）。
+1979年。2月至3月**对越自卫反击战**（打乱了苏联和越南的战略部署，摧毁了越南北部的工矿业，对于保护中国国家主权和领土完整以及东南亚地区乃至世界的和平与稳定都有重要的意义）。3月30日邓小平《坚持**四项基本原则**》。4月对国民经济实行”调整、改革、整顿、提高“的新八字方针（用三年时间调整国民经济，纠正经济工作中的失误，认真清理过去在这方面长期存在的”左倾错误“）。11月中共十一届四中全会《中共中央关于加快农业发展若干问题的决定》（加快发展农业生产，逐步实现农业现代化）。
 
-1980年。5月，在深圳、珠海、汕头、厦门设立经济特区。
+1980年。5月，在深圳、珠海、汕头、厦门**设立经济特区**。5月邓小平在重要谈话中肯定大包干，农村改革势在必行。9月，《关于进一步加强和完善农业生产责任制的几个问题》，肯定在生产队领导下实行的包产到户，不会脱离社会主义轨道。
 
-1981年6月中共十一届六中全会《历史决议》通过（1979年11月起由邓小平主持中共中央起草，科学评价毛泽东及其思想）。
+1981年6月中共十一届六中全会《历史决议》通过（科学评价毛泽东及其思想，主要矛盾是人民日益增长的物质文化需要同落后的社会生产之间的矛盾）。12月3日《关于恢复新疆生产建设兵团的决定》。
 
-1982年。12月4日，中华人民共和国第四部宪法（宪法4.0）在第五届全国人大第五次会议上正式通过并颁布。
+1982年。1月1日明确指出包产到户、包干到户都是社会主义集体经济的生产责任制（**家庭联产承包责任制**）。12月4日，中华人民共和国第四部宪法（**八二宪法**，宪法4.0）在第五届全国人大第五次会议上正式通过并颁布。
 
-1982年。9月中共十二次全国代表大会胡耀邦《全面开创社会主义现代化建设的新局面》（社会主义现代化纲领）。
+1982年。9月中共十二次全国代表大会（**党十二大**）胡耀邦《全面开创社会主义现代化建设的新局面》（社会主义现代化纲领）。
 
-1983年。4月建立海南省、海南经济特区。10月废除人民公社，建立乡（镇）政府作为基层政权，村民委员会。
+1983年。4月建立海南省、海南经济特区。10月**废除人民公社**，建立乡（镇）政府作为基层政权，村民委员会。
 
 1984年，基本上实现了以家庭联产承包责任制为中心的农村改革的第一步。5月，开放14个沿海城市。10月中共十二届三中全会《中共中央关于经济体制改革的决定》（马克思主义基本原理和中国社会主义实践相结合的政治经济学）。
 
@@ -294,25 +318,31 @@
 
 1986年，八六学潮。12月30日，邓小平在同几位中央负责同志谈话时指出，要旗帜鲜明地坚持四项基本原则，反对资产阶级自由化。
 
-1987年10月，中共第十三次全国代表大会（社会主义初级阶段和党的基本路线的提出，一个中心两个基本点）。
+1987年10月，中共第十三次全国代表大会（**党十三大**，社会主义初级阶段和党的基本路线的提出，一个中心两个基本点）。
 
-1989年，戈尔巴乔夫访华（中苏关系正常化）。八九政治风波。
+1989年，戈尔巴乔夫访华（中苏关系正常化）。八九春夏之交政治风波。
 
 1990年8月2日 至 1991年2月28日： 海湾战争。
 
-1991年。12月8日独立国家联合体。12月26日苏联解体。
+1991年。11月，十三届八中全会《中共中央关于进一步加强农业和农村工作的决定》提出把以家庭联产承包为主的责任制、统分结合的双层经营体制作为我国乡村集体经济组织的一项基本制度长期稳定下来，并不断充实完善。12月8日独立国家联合体（独联体）。12月26日**苏联解体**。
 
-1992年。1月至2月21日，南方谈话。10月中共第十四次全国代表大会（确立社会主义市场经济体制改革目标）。11月九二共识。
+1992年。1月至2月21日，**南方谈话**。10月中共第十四次全国代表大会（**党十四大**，确立社会主义市场经济体制改革目标）。11月，**九二共识**。
+
+1994年。12月第一次车臣战争。
 
 1995年。1月1日，世界贸易组织正式开始运作。
 
-1997年。7月1日香港回归。9月中共第十五次全国代表大会（高举邓小平理论伟大旗帜）
+1996年。8月31日第一次车臣战争停火，车臣获得非正式的独立地位。
 
-1999年。12月20日澳门回归。
+1997年。7月1日**香港回归**。9月中共第十五次全国代表大会（**党十五大**，高举邓小平理论伟大旗帜）
 
-2001年。9月11日911事件。10月7日阿富汗战争爆发。12月11日，中国正式加入世界贸易组织。
+1999年。8月第二次车臣战争。12月20日**澳门回归**。
 
-2002年11月中共第十六大全国代表大会（指定全面建成小康社会的奋斗目标、“三个代表”重要思想写入党章、党的执政能力建设）。
+2000年。第二次车臣战争基本结束。
+
+2001年。9月11日911事件。10月7日阿富汗战争爆发。12月11日，中国正式**加入世界贸易组织**。
+
+2002年11月中共第十六大全国代表大会（**党十六大**，指定全面建成小康社会的奋斗目标、“三个代表”重要思想写入党章、党的执政能力建设）。
 
 2003年3月20日 至 2011年12月18日：伊拉克战争。
 
@@ -322,30 +352,43 @@
 
 2005年2月全面论述构建社会主义和谐社会的重大战略思想。
 
-2007年10月中共十七大（全面阐述“科学发展观”、全面建设小康社会新部署、改革开放的深化）。
+2007年10月**党十七大**（全面阐述“科学发展观”、全面建设小康社会新部署、改革开放的深化）。
 
 2009年9月中共十七届四中全会（提出加强和改进党的建设的总体要求、目标任务、重要举措）。
 
-2012年11月中共第十八次全国代表大会（党的十八大），全面建成小康社会目标的确定，标志着中国已经进入全面建成小康社会的决定性阶段，开启了中国特色社会主义新时代。11月15日，中共十八届一中全会选举习近平为中央委员会总书记，决定习近平为中央军委主席。2012年十八大结束后不久习近平提出“实现中华民族伟大复兴就是中华民族以来最伟大的梦想”。十八大以来，党统筹推进“五位一体”总体布局，协调推进“四个全面”战略布局。12月，习近平首次提出“强军梦”，年底提出“为建设一支听党指挥、能打胜仗、作风优良的人民军队而奋斗”。
+2012年11月中共第十八次全国代表大会（**党十八大**），全面建成小康社会目标的确定，标志着中国已经进入全面建成小康社会的决定性阶段，开启了中国特色社会主义新时代。11月15日，中共十八届一中全会选举习近平为中央委员会总书记，决定习近平为中央军委主席。2012年十八大结束后不久习近平提出“实现中华民族伟大复兴就是中华民族以来最伟大的梦想”。十八大以来，党统筹推进**“五位一体”**总体布局，协调推进**“四个全面”**战略布局。12月，习近平首次提出**“强军梦”**，年底提出“为建设一支听党指挥、能打胜仗、作风优良的人民军队而奋斗”。
 
-**2012年11月十八大标志着进入中国特色社会主义新时代**
+**2012年11月党的十八大标志着进入中国特色社会主义新时代**
 
-2013年，3月中华人民共和国第十二届全国人民代表大会，习近平当选为中华人民共和国主席、中华人民共和国中央军事委员会主席。李克强同志为中华人民共和国国务院总理，会上习近平进一步强调（实现中华民族伟大复兴的中国梦，就是要实现国家富强、民族振兴、人民幸福，走中国道路，弘扬中国精神，凝聚中国力量，依靠人民实现）。3月习近平莫斯科演说首次提出人类命运共同体理念。
+2013年，3月中华人民共和国第十二届全国人民代表大会，习近平当选为中华人民共和国主席、中华人民共和国中央军事委员会主席。李克强同志为中华人民共和国国务院总理，会上习近平进一步强调（实现中华民族伟大复兴的中国梦，就是要实现国家富强、民族振兴、人民幸福，走中国道路，弘扬中国精神，凝聚中国力量，依靠人民实现）。3月习近平莫斯科演说首次提出**人类命运共同体**理念。
 
-2014年。11月习近平提出推进中国特色大国外交的战略思想。
+2014年。3月克里米亚独立公投其后被批准入俄。4月乌克兰冲突。11月习近平提出推进**中国特色大国外交**的战略思想。
 
-2016年，10月党的十八届六中全会（明确了习近平总书记党中央、全党的核心地位）。台湾民进党上台拒不承认九二共识。
+2015年2月乌克兰东部冲突双方达成《明斯克协议》实行停火。
 
-2017年。1月习近平联合国日内瓦总部演讲，系统阐述人类命运共同体的理论内涵和目标路径。3月，”构建人类命运共同体“被写入联合国安理会第2344号决议。10月党的第十九次全国代表大会（把习近平总书记党的核心、全党的核心地位写入党章；主题：不忘初心，牢记使命，高举中国特色社会主义伟大旗帜，决胜全面建成小康社会，夺取新时代中国特色社会主义伟大胜利；主要矛盾：人民日益增长的美好生活需要和不平衡不充分的发展之间的矛盾；2020到21世纪中叶两个阶段；党的建设）。
+2016年，10月党的十八届六中全会（明确了习近平总书记党中央、全党的核心地位）。**台湾民进党上台**拒不承认九二共识。《关于农村土地所有权承包权经营权分置办法的意见》，将农村土地产权中的土地承包经营权进一步划分为承包权和经营权，实行所有权、承包权、经营权分置并行（三权分置）。
 
-2018年。3月十三届全国人大《中华人民共和国宪法修正案》（以根本法形式确立党的领导地位）。美国单方面执意挑起中美经贸摩擦。
+2017年。1月习近平联合国日内瓦总部演讲，系统阐述人类命运共同体的理论内涵和目标路径。3月，”构建人类命运共同体“被写入联合国安理会第2344号决议。10月，党的第十九次全国代表大会（**党十九大**，把习近平总书记党的核心、全党的核心地位写入党章；主题：不忘初心，牢记使命，高举中国特色社会主义伟大旗帜，决胜全面建成小康社会，夺取新时代中国特色社会主义伟大胜利；**主要矛盾**：人民日益增长的美好生活需要和不平衡不充分的发展之间的矛盾；2020到21世纪中叶两个阶段；党的建设；第二轮土地承包到期后再延长30年）。
 
-2019年。6月香港爆发”修例风波“。10月党的十九届四中全会，提出坚持和完善中国特色社会主义制度，推进国家治理体系和治理能力现代化的目标。
+2018年。3月十三届全国人大《中华人民共和国宪法修正案》（以根本法形式确立党的领导地位）。美国单方面执意挑起**中美经贸摩**擦。
 
-2020年。是全面建成小康社会的决胜期。年初新冠疫情爆发。2月党中央决定成立中央港澳工作领导小组，取代原来设立的中央港澳工作协调小组。6月十三届全国人大常委会第二十次会议通过《中华人民共和国香港特别行政区维护国家安全法》（香港国安法），并将其列入香港基本法附件三，明确由香港特别行政区在当地公布实施，对香港特别行政区维护国家安全制度机制作出法律化、规范化、明晰化的具体安排。10月，党的十九届五中全会，《中共中央关于制定国民经济和社会发展第十四个五年规划和二〇三五年远景目标的建议》（《建议》，”十四五“规划的明确）
+2019年。6月香港爆发”修例风波“。10月党的十九届四中全会，提出坚持和完善中国特色社会主义制度，推进国家治理体系和治理能力现代化的目标。12月湖北省武汉市疾控中心通报发现，首例“不明原因”肺炎病例，此后上海广州北京等地都发现不明原因肺炎病例样本。
+
+2020年。是全面建成小康社会的决胜期。1月不明原因肺炎初步判定为新型冠状病毒。1月20日，**钟南山证实新冠病毒“人传人”**。1月，**新冠疫情爆发**。1月23日，武汉封城。2月2日火神山医院交付使用。2月7日李文亮殉职。2月8日雷神山医院交付使用。2月党中央决定成立中央港澳工作领导小组，取代原来设立的中央港澳工作协调小组。3月5日，李文亮等34人被追授疫情防控先进个人称号。3月12日世卫组织宣布新冠肺炎为全球性流行病。3月13日美国进入“国家紧急状态”。4月湖北省评定李文亮、夏思思等14名在疫情防控牺牲的一线人员为首批烈士。4月4日天安门广场下半旗哀悼疫情牺牲烈士和逝世同胞。4月8日零时零分，封城76天后，武汉解封。6月，十三届全国人大常委会第二十次会议通过《中华人民共和国香港特别行政区维护国家安全法》（香港国安法），并将其列入香港基本法附件三，明确由香港特别行政区在当地公布实施，对香港特别行政区维护国家安全制度机制作出法律化、规范化、明晰化的具体安排。6月，6·15中印加勒万河谷边境冲突。6月，北京疫情。10月，党的十九届五中全会，《中共中央关于制定国民经济和社会发展第十四个五年规划和二〇三五年远景目标的建议》（《建议》，”十四五“规划的明确）。11月全国832个贫困县全部摘帽、12.8万个贫困村全部出列、近一亿贫困人口实现脱贫，消除了绝对贫困和区域性整体贫困。
 
 2020年到2035年，在小康社会的基础上，在奋斗15年，基本实现社会主义现代化。
 
-2021年11月11日党的十九届六中全会（确立习思指导地位）。
+2021年。1月，吉林通化疫情。2月25日全国脱贫攻坚总结表彰大会（我国脱贫攻坚战取得了全面胜利）。3月，云南瑞丽疫情。7月1日中国共产党成立100周年。7月，江苏南京疫情（8月中旬结束）。11月11日党的十九届六中全会（确立习思指导地位）。12月西安疫情。次年新冠疫苗开始接种。
+
+2022年。2月吉林市长春市疫情（4月下旬基本控制）。3月上海疫情2020年以来最严重一次。4月1日上海全域静态管理。6月1日上海解除全域静态管理。8月三亚疫情（全域静态管理，9月初基本得到控制）。10月郑州疫情。10月中国共产党第二十次全国代表大会（**党二十大**），主题：高举中国特色社会主义旗帜，全面贯彻新时代中国特色社会主义思想，弘扬伟大建党精神，自信自强、守正创新、踔厉奋发、勇毅前行，为全面建设社会主义现代化国家、全面推进中华民族伟大复兴而团结奋斗。11月社会面病例数不断波动上升，部分地区静态管理。12月7日除养老院、福利院、医疗机构、托幼机构、中小学等特殊场所外，不再查验核酸检测阴性证明，不再查验健康码和行程码；对于跨地区流动人员也不再查验，不再开展落地检。12月新增感染者快速增长。12月25日，国家卫健委网站发布说明，从即日起，不再发布每日疫情信息，将由中国疾控中心发布相关疫情信息，供参考和研究使用。12月**疫情封控放开**（全国各地）。
+
+2023年。年初疫情放开后的全国大规模感染（死亡率较低）。2月24日国务院联防联控机制23日召开新闻发布会（“保健康、防重症”，我国取得疫情防控重大决定性胜利，接种新冠病毒疫苗34亿9226.5万剂次，接种总人数达13亿1040.3万，已完成全程接种12亿7691.1万)。3月中华人民共和国第十四届全国人民代表大会。
 
 2035年到21世纪中叶，在基本实现现代化的基础上，在奋斗15年，把我国建成富强民主文明和谐美丽的社会主义现代化强国。
+
+![image-20231112144705337](assets/image-20231112144705337.png)
+![image-20231112144729184](assets/image-20231112144729184.png)
+![image-20231112144741136](assets/image-20231112144741136.png)
+![image-20231112144757439](assets/image-20231112144757439.png)
+![image-20231112144841835](assets/image-20231112144841835.png)
+
