--- a/计网/数据链路层.md
+++ b/计网/数据链路层.md
@@ -187,6 +187,12 @@ S1负责二进制中最低第一位为1位子的检验，S2负责二进制中最
 
 CSMA/CD已成功应用于使用有线连接的局域网
 
+载波监听：每个站点在发送前和发送中都必须不停检测信道，在发送前检测信道是为了获得发送权，在发送中检测信道是为了及时发现发送的数据是否发生了碰撞。
+
+站点要发送数据前先监听信道，只有信道空闲才能发送。
+
+碰撞检测：边发送边监听，如果监听到了碰撞，则立即停止数据发送，等待一段随机时间后，重新开始尝试发送数据。
+
 **碰撞检测（CD）**
 
 先听后发、边听边发、冲突停发、随机重发
@@ -212,6 +218,8 @@ CSMA/CD还能从冲突中恢复
 无线局域网环境下：
 ①接收信号强度往往小于发送且无线介质上信号强度动态变化范围很大，若实现碰撞检测，则硬件上的花费很大；
 ②无线通信中中，并非所有的站点都能够听到对方，即存在"隐蔽站"问题。
+
+在无线局域网环境下，存在隐蔽站和暴露站的问题，因此采用CSMA/CA算法， 此算法采用能量检测、载波检测、能量载波混合检测三种检测信道空闲的方式。
 
 802.11标准定义了广泛应用于无线局域网的CSMA/CA协议，相对CSMA/CD将碰撞检测改为了**碰撞避免（CA）**
 
