--- a/计网/网络层.md
+++ b/计网/网络层.md
@@ -573,8 +573,9 @@ RIP 是**应用层协议**，它使用 **UDP 传送数据(端口 520)**。
 
 ## 开放最短路径优先 (OSPF) 协议
 
-开放最短路径优先(OSPF) 协议是使用分布式链路状态路由算法的典型代表，也是内部网
-关协议 (IGP) 的一种。
+开放最短路径优先(OSPF) 协议是使用分布式链路状态路由算法的典型代表，也是内部网关协议 (IGP) 的一种。
+
+基于链路状态的自治系统内部网关协议
 
 ### OSPF基本特点
 
